--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="codigoOfuscado.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script src = "js/scripjson.js"></script>
+    <script defer src="js/index.js"></script>
     <title>Virgin Gaming</title>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
@@ -78,37 +79,9 @@
     <div class="containerCAR " style="margin-left: 20%; margin-right: 10%; width: 60%; ">
 
         <!-- Full-width images with number text -->
-        <a href="producto.html">
-            <div class="mySlides ">
-                <div class="numbertext ">1 / 6</div>
-                <img src="imagenes/Slider/border2.jpg " style="width:100%; margin-bottom: -6px ">
-            </div>
-        </a>
-        <div class="mySlides ">
-            <div class="numbertext ">2 / 6</div>
-            <img src="imagenes/Slider/greenhellHorizontal-min.jpeg " style="width:100%; margin-bottom: -6px ">
+        <div id='carrusel'>
+        
         </div>
-
-        <div class="mySlides ">
-            <div class="numbertext ">3 / 6</div>
-            <img src="imagenes/Slider/gow horizontal-min.jpg" style="width:100%; margin-bottom: -6px ">
-        </div>
-
-        <div class="mySlides ">
-            <div class="numbertext ">4 / 6</div>
-            <img src="imagenes/Slider/valheim.jpg " style="width:100%; margin-bottom: -6px ">
-        </div>
-
-        <div class="mySlides ">
-            <div class="numbertext ">5 / 6</div>
-            <img src="imagenes/Slider/elderscrolls-min.jpg " style="width:100%; margin-bottom: -6px ">
-        </div>
-
-        <div class="mySlides ">
-            <div class="numbertext ">6 / 6</div>
-            <img src="imagenes/Slider/dyinglight-min.jpg " style="width:100%; margin-bottom: -6px ">
-        </div>
-
         <!-- Next and previous buttons -->
         <a class="prev " onclick="plusSlides(-1) ">&#10094;</a>
         <a class="next " onclick="plusSlides(1) ">&#10095;</a>
@@ -119,25 +92,8 @@
         </div>
 
         <!-- Thumbnail images -->
-        <div class="rowCAR ">
-            <div class="column ">
-                <img class="demo cursor " src="imagenes/Slider/border2.jpg " style="width:100%; text-align: right; " onclick="currentSlide(1) " alt=" 42% DESCUENTO - ARS$ 208,09 ">
-            </div>
-            <div class="column ">
-                <img class="demo cursor " src="imagenes/Slider/greenhellHorizontal-min.jpeg " style="width:100% " onclick="currentSlide(2) " alt="65% DESCUENTO - ARS$ 98,00  ">
-            </div>
-            <div class="column ">
-                <img class="demo cursor " src="imagenes/Slider/gow horizontal-min.jpg " style="width:100% " onclick="currentSlide(3) " alt="23% DESCUENTO - ARS$ 2.770,64">
-            </div>
-            <div class="column ">
-                <img class="demo cursor " src="imagenes/Slider/valheim.jpg " style="width:100% " onclick="currentSlide(4) " alt="240% DESCUENTO - ARS$ 135,00">
-            </div>
-            <div class="column ">
-                <img class="demo cursor " src="imagenes/Slider/elderscrolls-min.jpg " style="width:100% " onclick="currentSlide(5) " alt="37% DESCUENTO - ARS$ 1.259,37">
-            </div>
-            <div class="column ">
-                <img class="demo cursor " src="imagenes/Slider/dyinglight-min.jpg " style="width:100% " onclick="currentSlide(6) " alt="25% DESCUENTO - ARS$ 157,50">
-            </div>
+        <div id = 'rowCar' class="rowCAR ">
+
         </div>
     </div>
 
