cambios al login

--- a/login.html
+++ b/login.html
@@ -76,6 +76,9 @@
 		  <p><a href="Registro.html">¿No tiene una cuenta?</a></p>
 	  </form>
   </div>
+  <form id="login_form"  action="panel.html">
+    <input type="hidden" name="id" id="userId"/>
+</form>
   <br><br><br>
   <footer class="pie_de_pagina">
     <div class="box_redes"><br>
