linkeo pags index, hash, panel

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 	<title>Login basico</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script src="login.js"></script>
-    <script>"hash.js"</script>
+    <script src = "js/hash.js"></script>
 	<link rel="stylesheet" href="./css/estiloLogin.css"> 
 	<link rel="stylesheet" href="./css/boostrap.css">
 	<script type="text/javascript" src="js/main.js"></script>
@@ -76,7 +76,7 @@
 		  <p><a href="Registro.html">¿No tiene una cuenta?</a></p>
 	  </form>
   </div>
-  <form id="login_form"  action="panel.html">
+  <form id="login_form"  action="index.html">
     <input type="hidden" name="id" id="userId"/>
 </form>
   <br><br><br>
