--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/boostrap.css">
     <script src="codigoOfuscado.js"></script>
+    <script src="js/panel.js"></script>
+    <script src="js/hash.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script src = "js/scripjson.js"></script>
     <script defer src="js/index.js"></script>
