--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
                 <input type="password" name="pass" required="" id="pass">
                 <label for="">Contraseña</label>
             </div>
-            <input type="submit" value="Ingresar" onclick="validar()">
+            <input type="button" value="Ingresar" onclick="validar()">
             <p><a href="Registro.html">¿No tiene una cuenta?</a></p>
         </form>
     </div>
@@ -29,7 +29,7 @@
             var Contraseña = document.getElementById("pass").value;
 
             if (usuario == "usuario" && Contraseña == "1234") {
-                alert(window.location.href = "Registro.html");
+                window.location.href = "admin.html"
             } else {
                 alert("Verifique sus credenciales");
             }
