--- a/admin.html
+++ b/admin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./css/admin.css">
         <meta charset="utf-8">
         <title>Back to Top</title>
         
