--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="./css/admin.css">
         <meta charset="utf-8">
-        <title>Back to Top</title>
+        <title>Admin</title>
         
         <meta name="description" content="A simple page showing how to implement a back to top button">
         <meta name="author" content="Adi Purdila">
