sidebar de admin

--- a/admin.html
+++ b/admin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./css/barra.css">
         <link rel="stylesheet" href="./css/admin.css">
         <meta charset="utf-8">
         <title>Admin</title>
@@ -16,6 +17,16 @@
         <!--[if lt IE 9]>
             <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+        <sidebar>
+            <div class="logo">
+              <img src="imagenes/usuario.jpg">
+            </div>
+            
+            <ul>
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
+            </ul>   
+            </sidebar>
     </head>
     <body>
     
