Se arregla index, y se carga detalle de producto con el json de juegos

--- a/detalleDelProducto.html
+++ b/detalleDelProducto.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png" href="./imagenes/Logo.png" title="Logo">
     <script src="js/codigo.js"></script>
+    <script src="js/detalleDelProducto.js"></script>
     <title>Green Hell</title>
 </head>
 <script>
@@ -90,22 +91,25 @@
         </video>
     </section>
     <!------------------VIDEO-------------->
-    <img src="./imagenes/Greenhell.jpg " style="width: 30%; max-width: 30; margin-left: 3%; margin-top: -60%; position: FLEX; ">
+    <div id='imagenjuego'>
+    </div>
     <!------------------DATOS-------------->
     <div class="rightcol "></div>
         <div class="datazos " style="border-radius: 15px; ">
-            <div style="margin-bottom: 1.5%;font-size: 18px; ">
-                <b> TÍTULO: </b> Green Hell<br>
+            <div id='tituloJuego' style="margin-bottom: 1.5%;font-size: 18px; ">
+
             </div>
-            <div style="margin-bottom: 1.5%; font-size: 18px; ">
-                <b> GÉNERO:</b> Accion, MMO, Simuladores, Aventura <br>
+            <div id='generoJuego' style="margin-bottom: 1.5%; font-size: 18px; ">
+
             </div>
-            <div style="margin-bottom: 1.5%; font-size: 18px; ">
-                <b> DESARROLLADOR:</b> <a href="https://greenhell.fandom.com/wiki/Creepy_Jar"> Creepy Jar</a> </div>
-            <div style="margin-bottom: 1.5%; font-size: 18px; ">
-                <b> EDITOR:</b> <a href="https://store.steampowered.com/publisher/2K "> Creepy Jar </a></div>
-            <div style="margin-bottom: 1.5%; font-size: 18px; ">
-                <b> FECHA DE LANZAMIENTO:</b> 5 SEPTIEMBRE 2019 <br>
+            <div id='desarrolladorJuego' style="margin-bottom: 1.5%; font-size: 18px; ">
+
+            </div>
+            <div id='editorJuego' style="margin-bottom: 1.5%; font-size: 18px; ">
+
+            </div>
+            <div id='fechaLanzamientoJuego' style="margin-bottom: 1.5%; font-size: 18px; ">
+
             </div>
         </div>
         <!------------------DATOS-------------->
@@ -115,15 +119,12 @@
             <hr style="color: rgb(204, 204, 204); margin-right: 19%; margin-top: -1%; margin-bottom: 1%; ">
         </div>
 
-        <p style="font-size: 18px; margin-left: 36.7%;margin-right: 11%; color: rgb(165, 165, 165); font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ">
-            GREEN HELL es un simulador de supervivencia de mundo abierto ambientado en el entorno único e inexplorado de la selva amazónica.<br> Te quedas solo en la jungla sin comida ni equipo, tratando de sobrevivir y encontrar la salida. Aferrado a
-            la vida, el jugador se embarca en un viaje de durabilidad a medida que los efectos de la soledad se desgastan no solo en el cuerpo sino también en la mente. ¿Cuánto tiempo podrás sobrevivir a los peligros de lo desconocido? <br> En este viaje,
-            no recibirá ninguna ayuda del mundo exterior. Equipado solo con tus propias manos, tendrás que aprender técnicas de supervivencia reales para construir refugios, fabricar herramientas y fabricar armas para cazar y defenderte. Constantemente
-            amenazado por la jungla, lucharás tanto con animales salvajes como con enfermedades tropicales. Los jugadores también tendrán que enfrentarse a las trampas colocadas por su propia mente y los miedos que se arrastran en la oscuridad de la jungla
-            sin fin.<br>
-            <!------------------DESCRIPCION-------------->
-           
+        <p id='descripcionJuego' style="font-size: 18px; margin-left: 36.7%;margin-right: 11%; color: rgb(165, 165, 165); font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ">
 
+        </p>
+            <!------------------DESCRIPCION-------------->
+
+<br><br><br><br><br>
 
 <!--- COMENTARIOS-->
 <div class="box-comentario" >
