--- a/admin.html
+++ b/admin.html
@@ -24,6 +24,7 @@
             
             <ul>
               <li><a href="index.html">Inicio</a></li>
+              <li><a href="galeria.html">Productos</a></li>
               <li><a href="contacto.html">Contacto</a></li>
             </ul>   
             </sidebar>
